--- a/config/euroc/euroc_stereo_imu_config.yaml
+++ b/config/euroc/euroc_stereo_imu_config.yaml
@@ -14,6 +14,11 @@ cam0_calib: "cam0_mei.yaml"
 cam1_calib: "cam1_mei.yaml"
 image_width: 752
 image_height: 480
+
+# GPU acceleration
+use_gpu: 1
+use_gpu_acc_flow: 1
+use_gpu_ceres: 1
    
 
 # Extrinsic parameter between IMU and Camera.
