--- a/global_fusion/CMakeLists.txt
+++ b/global_fusion/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 3.5)
 project(global_fusion)
 
 set(CMAKE_CXX_STANDARD 14)
-add_compile_options(-Wall -Wextra -Wpedantic)
+#add_compile_options(-Wall -Wextra -Wpedantic)
+#add_compile_options(-Wno-vla)
 set(CMAKE_BUILD_TYPE Release)
 
 # find dependencies
