--- a/config/realsense_d435i/realsense_mono_imu_config.yaml
+++ b/config/realsense_d435i/realsense_mono_imu_config.yaml
@@ -8,7 +8,7 @@ num_of_cam: 1
 imu_topic: "/camera/camera/imu"
 image0_topic: "/camera/camera/color/image_raw"
 image1_topic: "/cam1/image_raw"
-output_path: "~/output/"
+output_path: "./output/"
 
 cam0_calib: "color.yaml"
 cam1_calib: "cam1_mei.yaml"
@@ -59,5 +59,5 @@ td: 0.0                             # initial value of time offset. unit: s. rea
 
 #loop closure parameters
 load_previous_pose_graph: 0        # load and reuse previous pose graph; load from 'pose_graph_save_path'
-pose_graph_save_path: "~/output/pose_graph/" # save and load path
+pose_graph_save_path: "./output/pose_graph/" # save and load path
 save_image: 1                   # save image in pose graph for visualization prupose; you can close this function by setting 0 
